Some layout changes.

--- a/Labels/Views/Home/NameTags.cshtml
+++ b/Labels/Views/Home/NameTags.cshtml
@@ -3,6 +3,10 @@
     ViewBag.ActivePage = "nametags";
 }
 
+@section styles{
+    <link rel="stylesheet" href="~/Scripts/nametags/nametags.css" />
+}
+
 <div class="nametags" data-apiurl="@Url.Content("~/api/")" data-labelurl="@Url.Content("~/Content/labels/")">
     <div class="form-horizontal">
         <div class="form-group">
@@ -17,19 +21,19 @@
         <div class="standard-label">
             <div class="form-group">
                 <label class="control-label col-sm-2">User *</label>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <select class="form-control users"></select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Manager *</label>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <select class="form-control managers"></select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Organization</label>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <select class="form-control orgs"></select>
                 </div>
             </div>
@@ -54,13 +58,13 @@
         </div>
         <div class="custom-label" style="display: none;">
             <div class="form-group">
-                <label class="control-label col-sm-2">Top</label>
+                <label class="control-label col-sm-3">Top</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control top-text" />
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">Bottom</label>
+                <label class="control-label col-sm-3">Bottom</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control bottom-text" />
                 </div>
@@ -76,7 +80,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             <div class="panel panel-default preview-panel" data-file="userlabel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Name Tag Label</h3>
@@ -89,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             <div class="panel panel-default preview-panel" data-file="mini">
                 <div class="panel-heading">
                     <h3 class="panel-title">Mini Backside Label</h3>
@@ -114,7 +118,7 @@
 
 @section scripts{
     <script src="~/Scripts/DYMO.Label.Framework.2.0.2.js"></script>
-    <script src="~/Scripts/nametags.js"></script>
+    <script src="~/Scripts/nametags/nametags.js"></script>
     <script>
         $(".nametags").nametags();
     </script>
