--- a/Labels/Views/Home/NameTags.cshtml
+++ b/Labels/Views/Home/NameTags.cshtml
@@ -20,13 +20,13 @@
         </div>
         <div class="standard-label">
             <div class="form-group">
-                <label class="control-label col-sm-2">User *</label>
+                <label class="control-label col-sm-2">User</label>
                 <div class="col-sm-3">
                     <select class="form-control users"></select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">Manager *</label>
+                <label class="control-label col-sm-2">Manager</label>
                 <div class="col-sm-3">
                     <select class="form-control managers"></select>
                 </div>
