--- a/Labels/Views/NameTags/Index.cshtml
+++ b/Labels/Views/NameTags/Index.cshtml
@@ -83,7 +83,7 @@
         <div class="col-sm-4">
             <div class="panel panel-default preview-panel" data-file="userlabel">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Name Tag Label</h3>
+                    <h3 class="panel-title">Name Tag Label Preview</h3>
                 </div>
                 <div class="panel-body">
                     <div class="label-preview"></div>
@@ -96,7 +96,7 @@
         <div class="col-sm-4">
             <div class="panel panel-default preview-panel" data-file="mini">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Mini Backside Label</h3>
+                    <h3 class="panel-title">Mini Backside Label Preview</h3>
                 </div>
                 <div class="panel-body">
                     <div class="label-preview"></div>
