1) Loading chemicals first so drop down is populated even if dymo is not installed. 2) added search on chemical/manage page.

--- a/Labels/Views/Chemicals/Index.cshtml
+++ b/Labels/Views/Chemicals/Index.cshtml
@@ -131,8 +131,8 @@
 </div>
 
 @section scripts{
-    <script src="~/Scripts/DYMO.Label.Framework.2.0.2.js"></script>
-    <script src="~/Scripts/chemicals/chemicals.js"></script>
+    <script src="~/Scripts/DYMO.Label.Framework.2.0.2.js?v=20170331"></script>
+    <script src="~/Scripts/chemicals/chemicals.js?v=20170331"></script>
     <script>
         var chemicals = $(".chemicals").chemicals();
     </script>
