--- a/Labels/Views/Chemicals/_ChemicalPanel.cshtml
+++ b/Labels/Views/Chemicals/_ChemicalPanel.cshtml
@@ -3,7 +3,7 @@
 @using LNF.Repository.Inventory;
 
 @model PrivateChemical
-@{ 
+@{
     string className = "panel panel-default chemical";
 
     if (Model.ApprovedByClientID == -1)
@@ -12,6 +12,8 @@
     }
 
     bool isStaff = ViewBag.IsStaff;
+
+    string approvedBy = Repository.GetApprovedBy(Model);
 }
 
 <div class="@className">
@@ -20,7 +22,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Chemical</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static">@Model.ChemicalName</p>
+                    <p class="form-control-static search-key">@Model.ChemicalName</p>
                 </div>
             </div>
             <div class="form-group">
@@ -32,7 +34,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Approved By</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static">@Repository.GetApprovedBy(Model)</p>
+                    <p class="form-control-static">@approvedBy</p>
                 </div>
             </div>
             <div class="form-group">
