A manager is now selected when the selected client changes.

--- a/Labels/Views/NameTags/Index.cshtml
+++ b/Labels/Views/NameTags/Index.cshtml
@@ -118,7 +118,7 @@
 
 @section scripts{
     <script src="~/Scripts/DYMO.Label.Framework.2.0.2.js"></script>
-    <script src="~/Scripts/nametags/nametags.js"></script>
+    <script src="~/Scripts/nametags/nametags.js?v=20170411"></script>
     <script>
         $(".nametags").nametags();
     </script>
